--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <p class="text11 schuifTransition">karten zu fr. 2.50 bis 6- </p>
     <p class="text12 schuifTransition">tonhallekasse, hug, jecklin, kuoni und filiale oerlikon kreditanstalt </p>
     
-    <p>josef muller-brockmann </p>
-    <p>josef muller-brockmann </p>
+    <p class= "hover1">josef muller-brockmann </p>
+    <p class= "hover2">josef muller-brockmann </p>
     </article>
 
 
